Refactor and finalize template for TDD-first, Cursor-optimized Python development
✅ Audited and cleaned entire repo to align with TDD-first principles
🧠 Integrated dynamic versioning via _version.py and removed circular imports
🔧 Updated Makefile with categorized commands and watch mode for TDD
🧪 Refactored tests to use dynamic versioning and ensured they pass
📚 Rewrote README to reflect updated workflows, tools, and Cursor integration
🛠️ Verified consistency across pyproject.toml, CI, Makefile, and CLI
📁 Cleaned up unused files, clarified file purposes, and enforced lean structure
🔍 Final rule checks and TDD enforcement embedded via Cursor .mdc files

Template is now cohesive, modern, and ready to support high-quality Python projects.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dev = [
     "mypy",
     "pytest>=7.0",
     "pytest-cov",
+    "pytest-xdist",  # For TDD watch mode (--looponfail flag)
     "ruff>=0.1.0",
 ]
 
@@ -53,6 +54,7 @@ dependencies = [
     "mypy",
     "pytest>=7.0",
     "pytest-cov",
+    "pytest-xdist",  # For TDD watch mode (--looponfail flag)
     "ruff>=0.1.0",
 ]
 
