--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,19 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# TDD & Development Tools
+#  Temporary files that may be created during TDD workflow
+.pytest_tmp_path/
+.testmondata
+.coverage.*
+.cache/
+test-reports/
+
+# TaskMaster AI specific (keep structure, ignore generated content)
+.taskmaster/reports/*.json
+.taskmaster/tasks/*.json
+.taskmaster/docs/*.txt
+
+# Hatch specific
+.hatch_build/
