--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,11 @@ build-backend = "hatchling.build"
 [project]
 name = "vibe_coding_template"
 dynamic = ["version"]
-description = "A minimal Python template for LLM-assisted development"
+description = "A minimal Python template with enforced TDD for LLM-assisted development"
 authors = [{ name = "Daryl Kang", email = "darylkang@live.com" }]
 readme = "README.md"
 requires-python = ">=3.10"
-keywords = ["template", "cursor", "hatch", "cli", "development"]
+keywords = ["template", "tdd", "cursor", "hatch", "cli", "development"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -18,6 +18,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 dependencies = [
     "pydantic>=2.0",
